--- a/style.css
+++ b/style.css
@@ -44,3 +44,19 @@ iframe#tela{
     height: 471px;
 
      }
+
+     section#redes-sociais{
+        text-align: right;
+     }
+
+     section#redes-sociais img{
+        width: 50px;
+        margin: 10px;
+        border-radius: 50%;
+        box-shadow: 2px 2px 5px black;
+        box-sizing: border-box;/*pra fazer parar de mexer os butões quando passo o mouse*/
+     }
+
+     section#redes-sociais img:hover{
+        border: 2px solid white;
+     }
